--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>4.2.0.RC3</version>
+            <version>5.3.7</version>
         </dependency>
     </dependencies><repositories>
     <repository>
